# imagecatalog

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  python-publish.yml
docs/: conf.py  index.rst  installation.rst  reference.rst  usage.rst
resources/: code_examples_cli.rst  code_examples_script.rst
scripts/: create_icons.py
src/imagecatalog/: __init__.py  __main__.py  imagecatalog.py
tests/: test_imagecatalog.py
